# kotori

./: Cargo.toml  LICENSE  README.md  sample.bak.json
artifacts/: sample-google-translate-api-response.txt
src/: lib.rs  main.rs
src/google_translate/: mod.rs
src/google_translate_m/: mod.rs
