[package]
name = "kotori"
description = "The name inspired by Blue Archive character, Toyomu Kotori. Heavily inspired by XUnity.AutoTranslator project. Educational purposes only."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kotori"
required-features = ["build-binary"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["cargo", "derive"], optional = true }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["cookies", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
tokio = { version = "1.35.0", features = [
    "rt",
    "net",
    "time",
    "macros",
], optional = true }

[features]
build-binary = ["clap", "tokio"]
blocking = []
